apps/slskd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slskd
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: slskd
    app.kubernetes.io/part-of: slskd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: slskd
    app.kubernetes.io/part-of: slskd
  ports:
    - name: http
      port: 5030
      targetPort: 5030
      protocol: TCP
    - name: slsk
      port: 50300
      targetPort: 50300
      protocol: TCP
